--- a/lang/translations/ar.po
+++ b/lang/translations/ar.po
@@ -7,8 +7,8 @@ msgstr ""
 
 msgctxt "Toolbar button tooltip for the Numbered List feature."
 msgid "Numbered List"
-msgstr "قائمة مرقمة"
+msgstr "قائمة رقمية"
 
 msgctxt "Toolbar button tooltip for the Bulleted List feature."
 msgid "Bulleted List"
-msgstr ""
+msgstr "قائمة نقطية"
